@@ -1,3 +1,8 @@
+2015-10-25  Natalia Portillo  <claunia@claunia.com>
+
+	* SCSI/Modes.cs:
+	  Added information from SCSI-3 SBC-1.
+
 2015-10-24  Natalia Portillo  <claunia@claunia.com>
 
 	* SCSI/Modes.cs:
